// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StackedColumn using SVG should render correctly 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-plot stacked-column"
    >
      <g>
        <rect
          class="column"
          height="0"
          style="fill: #99c1dc; stroke: #ffffff; opacity: 0.7;"
          width="50"
          x="0"
          y="100"
        />
        <rect
          class="column"
          height="0"
          style="fill: #99c1dc; stroke: #ffffff; opacity: 0.7;"
          width="50"
          x="50"
          y="100"
        />
      </g>
      <g>
        <rect
          class="column"
          height="0"
          style="fill: #fc998e; stroke: #ffffff; opacity: 0.7;"
          width="50"
          x="0"
          y="100"
        />
        <rect
          class="column"
          height="0"
          style="fill: #fc998e; stroke: #ffffff; opacity: 0.7;"
          width="50"
          x="50"
          y="100"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`StackedColumn using SVG should skip rendering if there is no x scale avaliable 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-plot stacked-column"
    />
  </svg>
</DocumentFragment>
`;

exports[`StackedColumn using SVG should skip rendering if there is no y scale avaliable 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-plot stacked-column"
    />
  </svg>
</DocumentFragment>
`;
